deleteFunc
